--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 body{
-    backgound-clolor: blue;
-    font-wight: bold;
+    background-color: blue;
+    font-weight: bold;
     color: red;
-    front-size:18px;
+    font-size:18px;
 }
